Fix mouse wheel scrolling on PDFs.

With the fix for flash not receiving wheel events
(see https://codereview.chromium.org/1828203003/) this broke PDFs
scrolling since they do want the events but then the events get
resent. When the events were resent they didn't have the appropriate
canScroll set on them causing gestures not to be generate.

Do not conflate canScroll in the mouse wheel event queue
to prevent the default action in blink. Just plumb
it via a WebSetting instead. This setting will eventually
be removed when the default wheel event path is removed.

BUG=598658

Review URL: https://codereview.chromium.org/1841053002

Cr-Commit-Position: refs/heads/master@{#384081}

Former-commit-id: 1f6dc1b24dfb56e0199b851f1c121195e33f2bd6