third_party/WebKit/Source/web/WebSettingsImpl.cpp
@@ -208,6 +208,11 @@ void WebSettingsImpl::setWebSecurityEnabled(bool enabled)
     m_settings->setWebSecurityEnabled(enabled);
 }
 
+void WebSettingsImpl::setWheelGesturesEnabled(bool enabled)
+{
+    m_settings->setWheelGesturesEnabled(enabled);
+}
+
 void WebSettingsImpl::setJavaScriptCanOpenWindowsAutomatically(bool canOpenWindows)
 {
     m_settings->setJavaScriptCanOpenWindowsAutomatically(canOpenWindows);
@@ -690,6 +695,11 @@ bool WebSettingsImpl::doubleTapToZoomEnabled() const
 bool WebSettingsImpl::mockGestureTapHighlightsEnabled() const
 {
     return m_settings->mockGestureTapHighlightsEnabled();
+}
+
+bool WebSettingsImpl::wheelGesturesEnabled() const
+{
+    return m_settings->wheelGesturesEnabled();
 }
 
 bool WebSettingsImpl::mainFrameResizesAreOrientationChanges() const
